--- a/Contact Me.html
+++ b/Contact Me.html
@@ -10,7 +10,7 @@
       <li>Email : piyushchouhan240701@gmail.com</li>
       <li>Phone No. : 8810398003</li>
     </ul>
-    <form action="mailto:piyushchouhan240701" method="post" enctype="text/plain">
+    <form action="mailto:piyushchouhan240701@gmail.com" method="post" enctype="text/plain">
       <label for="">Your Name:</label>
       <input type="text" name="Your Name" value=""><br>
       <label for="">Your Email:</label>
